finished image slider with labels, change font weight for the find buttons and the h1

--- a/landing-page.html
+++ b/landing-page.html
@@ -41,11 +41,20 @@
       </section>
       <section class="services-container">
         <h2>Popular Services Offered</h2>
+
         <div class="service-cards">
-          <img src="/images/services/home-repair.avif" alt="" class="card" />
-          <img src="/images/services/driver.avif" alt="" class="card" />
-          <img src="/images/services/housekeeping.avif" alt="" class="card" />
-          <img src="/images/services/masseuse.avif" alt="" class="card" />
+          <figure>
+            <div class="labels">
+              <h3>Home Repairs</h3>
+              <h3>Service Drivers</h3>
+              <h3>Housekeeping</h3>
+              <h3>Massage</h3>
+            </div>
+            <img src="/images/services/home-repair.jpg" />
+            <img src="/images/services/driver.jpg" />
+            <img src="/images/services/housekeeping.jpg" />
+            <img src="/images/services/massage.jpg" />
+          </figure>
         </div>
         <button class="btn-slide btn-slide-left">
           <i class="fa-solid fa fa-chevron-left fa-2x"></i>
