changed main-image and replaced the h3 tags to a tags for better semantics

--- a/landing-page.html
+++ b/landing-page.html
@@ -32,7 +32,7 @@
       </nav>
 
       <section class="introduction-container">
-        <img class="main-image" src="/images/main-image.avif" alt="workplace" />
+        <img class="main-image" src="/images/main-image.jpg" alt="workplace" />
         <h1>Find the best and secure way to provide your services.</h1>
         <div class="find-btns">
           <button class="find-btn btn-work">Find Work</button>
@@ -45,10 +45,10 @@
         <div class="service-cards">
           <figure>
             <div class="labels">
-              <h3>Home Repairs</h3>
-              <h3>Service Drivers</h3>
-              <h3>Housekeeping</h3>
-              <h3>Massage</h3>
+              <a href="#">Home Repairs</a>
+              <a href="#">Service Drivers</a>
+              <a href="#">Housekeeping</a>
+              <a href="#">Massage</a>
             </div>
             <img src="/images/services/home-repair.jpg" />
             <img src="/images/services/driver.jpg" />
