removed arrow button for image slides and replaced with infinite image sliding animation and more sevices button

--- a/landing-page.html
+++ b/landing-page.html
@@ -56,12 +56,9 @@
             <img src="/images/services/massage.jpg" />
           </figure>
         </div>
-        <button class="btn-slide btn-slide-left">
-          <i class="fa-solid fa fa-chevron-left fa-2x"></i>
-        </button>
-        <button class="btn-slide btn-slide-right">
-          <i class="fa-solid fa fa-chevron-right fa-2x"></i>
-        </button>
+        <h3>Explore our sercure community for professionals.</h3>
+        <p>What you find just might surprise and inspire you.</p>
+        <button class="btn-more-services">More Services</button>
       </section>
     </div>
   </body>
