placed labels inside the image and added a description and discover button

--- a/landing-page.html
+++ b/landing-page.html
@@ -45,10 +45,38 @@
         <div class="service-cards">
           <figure>
             <div class="labels">
-              <a href="#">Home Repairs</a>
+              <!-- <a href="#">Home Repairs</a>
               <a href="#">Service Drivers</a>
               <a href="#">Housekeeping</a>
-              <a href="#">Massage</a>
+              <a href="#">Massage</a> -->
+              <div>
+                <h3>Home Repairs</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iure, sed vero consequatur perspiciatis et!
+                </p>
+                <a href="#"><button>Discover</button></a>
+              </div>
+              <div>
+                <h3>Service Drivers</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iure, sed vero consequatur perspiciatis et!
+                </p>
+                <a href="#"><button>Discover</button></a>
+              </div>
+              <div>
+                <h3>Housekeeping</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iure, sed vero consequatur perspiciatis et!
+                </p>
+                <a href="#"><button>Discover</button></a>
+              </div>
+              <div>
+                <h3>Massage</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iure, sed vero consequatur perspiciatis et!
+                </p>
+                <a href="#"><button>Discover</button></a>
+              </div>
             </div>
             <img src="/images/services/home-repair.jpg" />
             <img src="/images/services/driver.jpg" />
@@ -56,7 +84,7 @@
             <img src="/images/services/massage.jpg" />
           </figure>
         </div>
-        <h3>Explore our sercure community for professionals.</h3>
+        <h4>Explore our sercure community for professionals.</h3>
         <p>What you find just might surprise and inspire you.</p>
         <button class="btn-more-services">More Services</button>
       </section>
