--- a/landing-page.html
+++ b/landing-page.html
@@ -58,7 +58,7 @@
       <section class="services-container">
         <h2>Popular Services Offered</h2>
 
-        <div class="service-cards">
+        <div class="services">
           <figure>
             <div class="labels">
               <div>
