made paragraph longer

--- a/landing-page.html
+++ b/landing-page.html
@@ -64,28 +64,28 @@
               <div>
                 <h3>Home Repairs</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iure, sed vero consequatur perspiciatis et!
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe voluptatibus temporibus ad aspernatur officiis quidem! Facilis neque rem atque expedita!
                 </p>
                 <a href="#"><button>Discover</button></a>
               </div>
               <div>
                 <h3>Service Drivers</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iure, sed vero consequatur perspiciatis et!
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe voluptatibus temporibus ad aspernatur officiis quidem! Facilis neque rem atque expedita!
                 </p>
                 <a href="#"><button>Discover</button></a>
               </div>
               <div>
                 <h3>Housekeeping</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iure, sed vero consequatur perspiciatis et!
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe voluptatibus temporibus ad aspernatur officiis quidem! Facilis neque rem atque expedita!
                 </p>
                 <a href="#"><button>Discover</button></a>
               </div>
               <div>
                 <h3>Massage</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iure, sed vero consequatur perspiciatis et!
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe voluptatibus temporibus ad aspernatur officiis quidem! Facilis neque rem atque expedita!
                 </p>
                 <a href="#"><button>Discover</button></a>
               </div>
