changed placeholder and font size

--- a/landing-page.html
+++ b/landing-page.html
@@ -37,7 +37,7 @@
             <option value="audi">House Cleaning Services</option>
           </select>
           <button><img src="/images/search.png" alt=""></button>
-          <input type="search" autocomplete="off" placeholder="Find Shit" value="">
+          <input type="search" autocomplete="off" placeholder="Search" value="">
         </form>
         <div class="user-login">
           <button class="btn-login">Log In</button>
