changed html orientation to implement new image carousell implementation

--- a/landing-page.html
+++ b/landing-page.html
@@ -57,44 +57,38 @@
       </section>
       <section class="services-container">
         <h2>Popular Services Offered</h2>
-
         <div class="services">
-          <figure>
-            <div class="labels">
-              <div>
-                <h3>Home Repairs</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem optio aperiam necessitatibus nobis rerum culpa?
-                </p>
-                <a href="#"><button>Discover</button></a>
-              </div>
-              <div>
-                <h3>Service Drivers</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem optio aperiam necessitatibus nobis rerum culpa?
-                </p>
-                <a href="#"><button>Discover</button></a>
-              </div>
-              <div>
-                <h3>Housekeeping</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem optio aperiam necessitatibus nobis rerum culpa?
-                </p>
-                <a href="#"><button>Discover</button></a>
-              </div>
-              <div>
-                <h3>Massage</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem optio aperiam necessitatibus nobis rerum culpa?
-                </p>
-                <a href="#"><button>Discover</button></a>
-              </div>
+          <div class="img-container"></div>
+          <div class="labels">
+            <div>
+              <h3>Home Repairs</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem optio aperiam necessitatibus nobis rerum culpa?
+              </p>
+              <a href="#"><button>Discover</button></a>
             </div>
-            <img src="/images/services/home-repair.jpg" />
-            <img src="/images/services/driver.jpg" />
-            <img src="/images/services/housekeeping.jpg" />
-            <img src="/images/services/massage.jpg" />
-          </figure>
+            <div>
+              <h3>Service Drivers</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem optio aperiam necessitatibus nobis rerum culpa?
+              </p>
+              <a href="#"><button>Discover</button></a>
+            </div>
+            <div>
+              <h3>Housekeeping</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem optio aperiam necessitatibus nobis rerum culpa?
+              </p>
+              <a href="#"><button>Discover</button></a>
+            </div>
+            <div>
+              <h3>Massage</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem optio aperiam necessitatibus nobis rerum culpa?
+              </p>
+              <a href="#"><button>Discover</button></a>
+            </div>
+          </div>
         </div>
         <h4>Explore our sercure community for professionals.</h3>
         <p>What you find just might surprise and inspire you.</p>
